fix: add contrast to table header text on dark theme
* Bump version to 0.2.2

--- a/prettier.css
+++ b/prettier.css
@@ -32,6 +32,10 @@
     --colour-scheme: dark;
 }
 
+:root.dark .prose {
+    --tw-prose-headings: var(--colour-text-primary);
+}
+
 body {
     background-color: var(--colour-background-primary);
     color: var(--colour-text-secondary);
